{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 703,
  "lineage": "710ad7aa-c638-31d3-7070-b20564455c6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ap-northeast-2a-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba36d59c7d44afdc",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:elastic-ip/eipalloc-0ba36d59c7d44afdc",
            "association_id": "eipassoc-0c70ef37b6ffd495c",
            "domain": "vpc",
            "id": "eipalloc-0ba36d59c7d44afdc",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00324327719341f83",
            "private_dns": "ip-10-0-1-157.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-13-125-134-193.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.134.193",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "eipalloc-0ba36d59c7d44afdc",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ap-northeast-2b-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0775d2c6674536fec",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:elastic-ip/eipalloc-0775d2c6674536fec",
            "association_id": "eipassoc-04026ddec1bcf5fba",
            "domain": "vpc",
            "id": "eipalloc-0775d2c6674536fec",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08e9c1fec1cc4c382",
            "private_dns": "ip-10-0-3-115.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.115",
            "public_dns": "ec2-3-39-89-228.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.89.228",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "eipalloc-0775d2c6674536fec",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a031131ddd646429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:elastic-ip/eipalloc-0a031131ddd646429",
            "association_id": "eipassoc-0345ea99720b8ea8d",
            "domain": "vpc",
            "id": "eipalloc-0a031131ddd646429",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-080907e6b947a83d0",
            "private_dns": "ip-10-0-1-196.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-3-37-176-235.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.176.235",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "eipalloc-0a031131ddd646429",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0232c20b172a33968",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:elastic-ip/eipalloc-0232c20b172a33968",
            "association_id": "eipassoc-037c71a4e628af62b",
            "domain": "vpc",
            "id": "eipalloc-0232c20b172a33968",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c3908dcc3f8b07c0",
            "private_dns": "ip-10-0-3-56.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.56",
            "public_dns": "ec2-3-34-221-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.221.219",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "eipalloc-0232c20b172a33968",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2a-bastion-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0a99726a25ed1487c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a99726a25ed1487c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04dbfafcbd078c5f6"
              }
            ],
            "primary_network_interface_id": "eni-04dbfafcbd078c5f6",
            "private_dns": "ip-10-0-1-15.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "public_dns": "ec2-54-180-138-40.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.138.40",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da6eae77c3ce0137",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0941ccd3df5273860"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd49d78cd185fe47",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0941ccd3df5273860"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0a99726a25ed1487c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_subnet.public-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2a-master-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-07275a9c014a993ec",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-07275a9c014a993ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b9c7aae3faa75fde"
              }
            ],
            "primary_network_interface_id": "eni-0b9c7aae3faa75fde",
            "private_dns": "ip-10-0-2-242.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.242",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ea76200ed97f738",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f803d80250be76d2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-07275a9c014a993ec",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2a-master-node-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0095ded6d6d3b897f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-0095ded6d6d3b897f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fc4254829f891657"
              }
            ],
            "primary_network_interface_id": "eni-0fc4254829f891657",
            "private_dns": "ip-10-0-2-252.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.252",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034aba452ac928ad2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f803d80250be76d2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0095ded6d6d3b897f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2a-worker-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0da20ae19ffde2d33",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-0da20ae19ffde2d33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e81f81591f75a243"
              }
            ],
            "primary_network_interface_id": "eni-0e81f81591f75a243",
            "private_dns": "ip-10-0-2-93.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.93",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078fadbabad8ddc1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f803d80250be76d2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0da20ae19ffde2d33",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2b-bastion-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0e85910166c2bf04e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e85910166c2bf04e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a8a4e6a6d60fe7b8"
              }
            ],
            "primary_network_interface_id": "eni-0a8a4e6a6d60fe7b8",
            "private_dns": "ip-10-0-3-185.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.185",
            "public_dns": "ec2-15-165-9-63.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.9.63",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc0dc065404fdf3a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0941ccd3df5273860"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011d5389429222a32",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0941ccd3df5273860"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0e85910166c2bf04e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2b-master-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0568600fe3e654680",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-0568600fe3e654680",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04164b27f02dc8299"
              }
            ],
            "primary_network_interface_id": "eni-04164b27f02dc8299",
            "private_dns": "ip-10-0-4-158.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.158",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd541d8863515140",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ff0e85187f199a2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0568600fe3e654680",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2b-worker-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-0ac29bf42a3f3bdf5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-0ac29bf42a3f3bdf5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03f6b3097306968b4"
              }
            ],
            "primary_network_interface_id": "eni-03f6b3097306968b4",
            "private_dns": "ip-10-0-4-214.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.214",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0587b8b729adf9ebd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ff0e85187f199a2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-0ac29bf42a3f3bdf5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ap-northeast-2b-worker-node-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087e08db3e40f7429",
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:instance/i-006956cd885a94546",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ktcloud-node-profile",
            "id": "i-006956cd885a94546",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ktcloud-bastion-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02d1218c26bf05f25"
              }
            ],
            "primary_network_interface_id": "eni-02d1218c26bf05f25",
            "private_dns": "ip-10-0-4-219.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.219",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-056ecaa6de8c263ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c50565041200fb98"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07ff0e85187f199a2",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c50565041200fb98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "i-006956cd885a94546",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_key_pair.bastion-node-key",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:internet-gateway/igw-024421e7e2fdfb5af",
            "id": "igw-024421e7e2fdfb5af",
            "owner_id": "208876571165",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "igw-024421e7e2fdfb5af",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kt-cloud-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:loadbalancer/net/kt-cloud-nlb/5be2e909d39b4a77",
            "arn_suffix": "net/kt-cloud-nlb/5be2e909d39b4a77",
            "dns_name": "kt-cloud-nlb-5be2e909d39b4a77.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:loadbalancer/net/kt-cloud-nlb/5be2e909d39b4a77",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kt-cloud-nlb",
            "region": "ap-northeast-2",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0232c20b172a33968",
                "subnet_id": "subnet-011d5389429222a32"
              },
              {
                "allocation_id": "eipalloc-0a031131ddd646429",
                "subnet_id": "subnet-0cd49d78cd185fe47"
              }
            ],
            "subnets": [
              "subnet-011d5389429222a32",
              "subnet-0cd49d78cd185fe47"
            ],
            "vpc_id": "vpc-02750c42d3a9c6a68",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:loadbalancer/net/kt-cloud-nlb/5be2e909d39b4a77"
          },
          "dependencies": [
            "aws_eip.nlb_eip_2a",
            "aws_eip.nlb_eip_2b",
            "aws_subnet.public-ap-northeast-2a",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k8s-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:listener/net/kt-cloud-nlb/5be2e909d39b4a77/0745eefd894c863c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:listener/net/kt-cloud-nlb/5be2e909d39b4a77/0745eefd894c863c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:loadbalancer/net/kt-cloud-nlb/5be2e909d39b4a77",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:listener/net/kt-cloud-nlb/5be2e909d39b4a77/0745eefd894c863c"
          },
          "dependencies": [
            "aws_eip.nlb_eip_2a",
            "aws_eip.nlb_eip_2b",
            "aws_lb.kt-cloud-nlb",
            "aws_lb_target_group.k8s-api-tg",
            "aws_subnet.public-ap-northeast-2a",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k8s-api-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "arn_suffix": "targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "6443",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:loadbalancer/net/kt-cloud-nlb/5be2e909d39b4a77"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-api-tg",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ap-northeast-2a-master-node-01-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c,i-07275a9c014a993ec,6443",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-07275a9c014a993ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-07275a9c014a993ec"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_instance.ap-northeast-2a-master-node-01",
            "aws_key_pair.bastion-node-key",
            "aws_lb_target_group.k8s-api-tg",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ap-northeast-2a-master-node-02-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c,i-0095ded6d6d3b897f,6443",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-0095ded6d6d3b897f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-0095ded6d6d3b897f"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_instance.ap-northeast-2a-master-node-02",
            "aws_key_pair.bastion-node-key",
            "aws_lb_target_group.k8s-api-tg",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ap-northeast-2b-master-node-01-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c,i-0568600fe3e654680,6443",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-0568600fe3e654680"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "port": 6443,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:208876571165:targetgroup/k8s-api-tg/0a35436e5a170e5c",
            "target_id": "i-0568600fe3e654680"
          },
          "dependencies": [
            "aws_iam_instance_profile.ktcloud-cluster-node-profile",
            "aws_instance.ap-northeast-2b-master-node-01",
            "aws_key_pair.bastion-node-key",
            "aws_lb_target_group.k8s-api-tg",
            "aws_security_group.bastion-node-sg",
            "aws_security_group.cluster-node-sg",
            "aws_subnet.private-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc",
            "data.aws_iam_role.ktcloud-cluster-node-role",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ap-northeast-2a-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba36d59c7d44afdc",
            "association_id": "eipassoc-0c70ef37b6ffd495c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-019bb1f04d9b03b78",
            "network_interface_id": "eni-00324327719341f83",
            "private_ip": "10.0.1.157",
            "public_ip": "13.125.134.193",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cd49d78cd185fe47",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "nat-019bb1f04d9b03b78",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2a-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ap-northeast-2b-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0775d2c6674536fec",
            "association_id": "eipassoc-04026ddec1bcf5fba",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d1f527dab23c8bbf",
            "network_interface_id": "eni-08e9c1fec1cc4c382",
            "private_ip": "10.0.3.115",
            "public_ip": "3.39.89.228",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011d5389429222a32",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "nat-0d1f527dab23c8bbf",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2b-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kt-cloud-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:route-table/rtb-08a6b8b19f3f9c53e",
            "id": "rtb-08a6b8b19f3f9c53e",
            "owner_id": "208876571165",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024421e7e2fdfb5af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtb-08a6b8b19f3f9c53e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-ap-northeast-2a-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:route-table/rtb-053173cc73ed290bc",
            "id": "rtb-053173cc73ed290bc",
            "owner_id": "208876571165",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-019bb1f04d9b03b78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtb-053173cc73ed290bc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2a-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.ap-northeast-2a-nat-gw",
            "aws_subnet.public-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-ap-northeast-2b-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:route-table/rtb-015fa39cfbac4c7e4",
            "id": "rtb-015fa39cfbac4c7e4",
            "owner_id": "208876571165",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d1f527dab23c8bbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtb-015fa39cfbac4c7e4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2b-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.ap-northeast-2b-nat-gw",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-2a-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075ce2b1e4d2a0585",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-053173cc73ed290bc",
            "subnet_id": "subnet-0f803d80250be76d2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtbassoc-075ce2b1e4d2a0585",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2a-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.ap-northeast-2a-nat-gw",
            "aws_route_table.private-ap-northeast-2a-rt",
            "aws_subnet.private-ap-northeast-2a",
            "aws_subnet.public-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-2b-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0170b8d2be2d216f7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-015fa39cfbac4c7e4",
            "subnet_id": "subnet-07ff0e85187f199a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtbassoc-0170b8d2be2d216f7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.ap-northeast-2b-nat-eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.ap-northeast-2b-nat-gw",
            "aws_route_table.private-ap-northeast-2b-rt",
            "aws_subnet.private-ap-northeast-2b",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2a-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002c576b7779fa858",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08a6b8b19f3f9c53e",
            "subnet_id": "subnet-0cd49d78cd185fe47"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtbassoc-002c576b7779fa858",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.kt-cloud-public-rt",
            "aws_subnet.public-ap-northeast-2a",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a70b0bd3de7a41c4",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08a6b8b19f3f9c53e",
            "subnet_id": "subnet-011d5389429222a32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "rtbassoc-0a70b0bd3de7a41c4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.kt-cloud-public-rt",
            "aws_subnet.public-ap-northeast-2b",
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-node-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:security-group/sg-0941ccd3df5273860",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0941ccd3df5273860",
            "ingress": [
              {
                "cidr_blocks": [
                  "210.113.231.189/32"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "210.113.231.189/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-node-sg",
            "name_prefix": "",
            "owner_id": "208876571165",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "sg-0941ccd3df5273860",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-node-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:security-group/sg-0c50565041200fb98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c50565041200fb98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0941ccd3df5273860"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cluster-node-sg",
            "name_prefix": "",
            "owner_id": "208876571165",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "sg-0c50565041200fb98",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.bastion-node-sg",
            "aws_vpc.kt-cloud-vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kt-cloud-cluster-efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:security-group/sg-0c87f49c817af2157",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c87f49c817af2157",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20260503034600670500000004",
            "name_prefix": "terraform-",
            "owner_id": "208876571165",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "sg-0c87f49c817af2157",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:subnet/subnet-0f803d80250be76d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f803d80250be76d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208876571165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "subnet-0f803d80250be76d2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:subnet/subnet-07ff0e85187f199a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff0e85187f199a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208876571165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "subnet-07ff0e85187f199a2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:subnet/subnet-0cd49d78cd185fe47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd49d78cd185fe47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208876571165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "subnet-0cd49d78cd185fe47",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:subnet/subnet-011d5389429222a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011d5389429222a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208876571165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "vpc_id": "vpc-02750c42d3a9c6a68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "subnet-011d5389429222a32",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.kt-cloud-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kt-cloud-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:208876571165:vpc/vpc-02750c42d3a9c6a68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0212f9231fb04032c",
            "default_route_table_id": "rtb-0e3aee1289abb499e",
            "default_security_group_id": "sg-05e3e3fb7f34dbc59",
            "dhcp_options_id": "dopt-41c8802a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02750c42d3a9c6a68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3aee1289abb499e",
            "owner_id": "208876571165",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "208876571165",
            "id": "vpc-02750c42d3a9c6a68",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}